# Raspi-epaper-apps

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  bcm2835.nix  flake.nix  stb_image.nix
apps/: CMakeLists.txt  result
apps/common/: color_palette.hh
apps/dithering/: main.cc
apps/draw_box/: main.cc
apps/example/: EPD_7in3e_test.c  EPD_Test.h  ImageData.h  ImageData2.c  main.c
apps/gui_client/: gui_client.hh  image_server.grpc.pb.cc  main.cc  main.moc
apps/image_client/: image_server.grpc.pb.h  main.cc
apps/image_server/: client.py  image_server.pb.cc  image_server.pb.h  image_server.proto  image_server_pb2.py  image_server_pb2.pyi  image_server_pb2_grpc.py  main.cc
apps/readbitmap/: main.cc
apps/sender_app/: ToolWindow.hh  ToolWindow.moc  dithering.hh  grpc_client.hh  imageAdjuster.hh  main.cc  main.moc
apps/simple/: main.cc
client/: client.py  convert.py  image_server_pb2.py  image_server_pb2_grpc.py  test.py
convert_image/: convert.py
epaper/: CMakeLists.txt
epaper/include/: Epaper.hh  epd_7in3e.hh
epaper/src/: Epaper.cc  epd_7in3e.cc  stb_image.cc
lib/: CMakeLists.txt
lib/include/: DEV_Config.h  Debug.h  EPD_7in3e.h  GUI_BMPfile.h  GUI_Paint.h  RPI_gpiod.h  dev_hardware_SPI.h  fonts.h  sysfs_gpio.h  sysfs_software_spi.h
lib/src/: DEV_Config.c  EPD_7in3e.c  GUI_BMPfile.c  dev_hardware_SPI.c
